tests/ui/coherence/super-traits/super-trait-knowable-nested.next.stderr
error[E0119]: conflicting implementations of trait `Overlap<_>` for type `()`
  --> $DIR/super-trait-knowable-nested.rs:19:1
   |
LL | impl<T, U: Bound<T>> Overlap<T> for U {}
   | ------------------------------------- first implementation here
LL | impl<T> Overlap<T> for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`
   |
   = note: downstream crates may implement trait `Bound<_>` for type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
